[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteosim"
version = "0.1.0"
description = "A Python package and workflow that simulates a bottom-up proteomics experiment. The pipeline takes a multi-protein FASTA file as input, performs in-silico digestion, predicts LC retention times, and simulates MS1/MS2 spectra including peptide masses, m/z values, and fragment ions. The code is under active development."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lilli Schmitt (lilli.schmitt@gmx.net)" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pytest", 
    "pandas",
    "matplotlib",
    "pyteomics"
]

[tool.setuptools.packages.find]
include = ["proteosim*"]
